--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cobidev/simplefolio"
+    "url": "git+https://github.com/shirleenoey/simplefolio"
   },
   "keywords": [],
   "author": "Jacobo Martinez",
